# schema-scout

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: agentic-ai-readiness.md  dev-environment-setup.md  example-proposal.md  pii-anonymization-design.md  tool-installation-log.xlsx
schema_scout/: __init__.py  _demo.py  agentcontext.py  catalog_io.py  classify.py  cli.py  connect.py  diff.py  domains.py  exports.py  extract.py  htmlreport.py  lint.py  mcp_server.py  model.py  paths.py  profile.py  readiness.py  relationships.py  render.py  semantic.py  usage.py
tests/: test_agentcontext.py  test_catalog_io.py  test_classify.py  test_diff.py  test_domains.py  test_exports.py  test_htmlreport.py  test_lint.py  test_mcp_tools.py  test_paths.py  test_profile_exact.py  test_readiness.py  test_relationships.py  test_render.py  test_usage.py
