[project]
name = "schema-scout"
version = "0.1.0"
description = "Reverse-engineer, profile, and map large SQL Server schemas (150+ tables) into an AI-ready data catalog."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pyodbc>=5.0",
    "pandas>=2.0",
]

[project.optional-dependencies]
ai = ["requests>=2.31"]
dev = ["pytest>=8.0"]

[project.scripts]
schema-scout = "schema_scout.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["schema_scout*"]
