[project]
name = "schema-scout"
version = "0.1.0"
description = "Reverse-engineer, profile, and map large SQL Server schemas (150+ tables) into an AI-ready data catalog."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Pawan Singh Kapkoti" }]
keywords = [
    "sql-server", "data-catalog", "schema", "metadata",
    "data-engineering", "erd", "data-governance", "pii",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "pyodbc>=5.0",
    "pandas>=2.0",
]

[project.optional-dependencies]
ai = ["requests>=2.31"]
dev = ["pytest>=8.0"]

[project.scripts]
schema-scout = "schema_scout.cli:main"

[project.urls]
Homepage = "https://github.com/Pawansingh3889/schema-scout"
Repository = "https://github.com/Pawansingh3889/schema-scout"
Issues = "https://github.com/Pawansingh3889/schema-scout/issues"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["schema_scout*"]
